# Diploma

NotifService/: .gitignore  pyproject.toml
NotifService/src/notifservice/: main.py
NotifService/src/notifservice/app/interfaces/: emailSender.py  unitOfWork.py
NotifService/src/notifservice/app/interfaces/repositories/: notifRepo.py  userRepo.py
NotifService/src/notifservice/app/useCases/: sendUseCase.py
NotifService/src/notifservice/data/: errors.py
NotifService/src/notifservice/data/entities/: notification.py  user.py
NotifService/src/notifservice/data/enums/: notifStatus.py  notifType.py
NotifService/src/notifservice/data/valueObjects/: notifContent.py
NotifService/tests/unitTests/data/entities/: test_notification.py  test_user.py
