[project]
name = "notifservice"
version = "0.1.0"
description = ""
authors = [
    {name = "goshmak",email = "gosh.maksimov2017@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "notifservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
app = "notifservice.main:start"